# multiversion_library_test

./: CMakeLists.txt  run.sh
A/: CMakeLists.txt
B/: CMakeLists.txt
C/v1/: CMakeLists.txt
C/v2/: CMakeLists.txt
example/: crypto.h  crypto_v1.c  crypto_v2.c  java  java.c  jni_v1.c  jni_v2.c  run.sh
